<resources>
    <string name="app_name">Ministry</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="favourite">Favourite</string>
    <string name="search_by_author_title">Search by Author, title</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Change password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?  <b> Sign up</b></string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="notes">Notes</string>
    <string name="setting">Setting</string>
    <string name="library">Library</string>
</resources>