<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.view.auth.AuthActivity">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_220sdp"
        android:scaleType="fitXY"
        android:src="@drawable/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/shadow"
        app:layout_constraintBottom_toBottomOf="@+id/banner"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/banner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/banner"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:letterSpacing="0.2"
            android:text="Welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:letterSpacing="0.1"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="@dimen/_26ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="Sign in to continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/banner">

            <EditText
                android:id="@+id/nameInEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/_4sdp"
                android:hint="@string/email"
                android:backgroundTint="@color/purple_1"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:paddingStart="0dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <EditText
                android:id="@+id/passwordInEd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_pass"
                android:backgroundTint="@color/purple_1"
                android:drawablePadding="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:paddingStart="0dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:textColor="@color/black"
            android:letterSpacing="0.04"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="Sign in"
            app:backgroundTint="@color/purple"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or connect"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/purple_1"
            android:letterSpacing="0.05"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton2"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:textColor="@color/purple_1"
                app:layout_constraintEnd_toStartOf="@+id/materialButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/purple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                android:textColor="@color/purple_1"
                android:layout_marginStart="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialButton2"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/purple" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>