<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_53sdp"
        android:src="@drawable/avatar"
        app:civ_border_color="@color/purple"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:textColor="@color/purple"
        android:textSize="@dimen/_14ssp"
        android:text="Peter Samuel"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:textColor="@color/purple"
        android:textSize="@dimen/_14ssp"
        android:text="979725"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintTop_toBottomOf="@+id/phone">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_6sdp"
            app:rippleColor="@color/purple">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/edit_profile"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_6sdp"
            app:rippleColor="@color/purple">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/change_password"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:clickable="true"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_4sdp"
            app:rippleColor="@color/purple">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple"
                android:paddingHorizontal="@dimen/_12sdp"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/privacy"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/logoutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardElevation="@dimen/_4sdp"
        app:rippleColor="@color/white"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:text="Logout"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>